[gd_scene load_steps=5 format=3 uid="uid://ct7njfoyl3r6i"]

[ext_resource type="Script" path="res://title.gd" id="1_10teu"]
[ext_resource type="Texture2D" uid="uid://c538ovbml6xvd" path="res://Sprites/Title1.png" id="1_qllui"]
[ext_resource type="Texture2D" uid="uid://s74ix6if7hq1" path="res://Sprites/GhostBall.png" id="2_m7ig6"]
[ext_resource type="Script" path="res://the_o.gd" id="3_jqo55"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_10teu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 549.032
offset_top = 386.219
offset_right = 619.032
offset_bottom = 487.219

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Title" type="Sprite2D" parent="."]
position = Vector2(604.256, 206.068)
texture = ExtResource("1_qllui")

[node name="The O" type="Sprite2D" parent="."]
position = Vector2(504.692, 319.542)
scale = Vector2(0.13, 0.13)
texture = ExtResource("2_m7ig6")
script = ExtResource("3_jqo55")

[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
